k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: mini-ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: mini-ecommerce-order:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: mini-ecommerce
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 80
      targetPort: 3003
