k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: mini-ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: mini-ecommerce-product:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: mini-ecommerce
spec:
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: 3002
